package conse;

public interface Cargable {
    void cargar(double peso);
    void descargar(double peso);
}
